<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_iphone"
            android:icon="@drawable/ic_menu_iphone"
            android:title="@string/menu_katalog_iphone" />
        <item
            android:id="@+id/nav_laptop"
            android:icon="@drawable/ic_menu_laptop"
            android:title="@string/menu_katalog_laptop_msi" />

        <item
            android:id="@+id/nav_watch"
            android:icon="@drawable/ic_menu_watch"
            android:title="@string/menu_katalog_watch" />

    </group>
</menu>